Sonar findings - fix